# noughts-and-crosses

./: .gitignore  Cargo.toml  README.md
benches/: solver_benchmark.rs
solver/: Cargo.toml
solver/benches/: solver_benchmark.rs
solver/src/: main.rs  solver.rs
solver/tests/: solver_tests.rs
src/: main.rs  solver.rs
tauri-ui/: package.json  tailwind.config.cjs
tauri-ui/src/: App.svelte  Board.svelte  BoardSettings.svelte  SliderWithCentredLabel.svelte
tauri-ui/src-tauri/: Cargo.toml  tauri.conf.json
tauri-ui/src-tauri/src/: commands.rs  main.rs
tests/: solver_tests.rs
